# radar-backend

./: .env.example  .gitignore  README.md  output.txt  pyproject.toml
config/: sources.yaml
migrations/: 001_create_compliance_radar_tables.sql  002_compliance_radar_execution_tables.sql
requirements-and-design/compliance-radar-1.0/: PRD.docx  architecture.drawio  database-design.md  requirements.md  sequence-diagrams.md  stage-4-code-architecture.md
requirements-and-design/compliance-radar-1.0/monitor/: monitor.md  monitorstage1design.md  monitorstage2design.md  monitorstage3design.md
src/radar_backend/: __init__.py  __main__.py  logging_config.py
src/radar_backend/config/: __init__.py  settings.py
src/radar_backend/db/: __init__.py  connection.py
src/radar_backend/domain/: __init__.py  enums.py  models.py
src/radar_backend/llm/: __init__.py  factory.py  policy_filter.py  policy_impact_extractor.py  provider.py
src/radar_backend/pdf/: __init__.py  downloader.py
src/radar_backend/services/: __init__.py  container.py  email_service.py  frontend_urls.py  operational_webhooks.py  rate_limit.py  webhook_service.py
tests/: test_create_user_actions.py  test_create_user_actions_integration.py  test_email_service.py  test_llm_factory.py  test_openai_provider.py  test_policy_impact_extractor.py  test_repositories_integration.py  test_send_action_notifications.py  test_send_action_notifications_integration.py  test_send_operational_webhooks.py  test_send_operational_webhooks_integration.py  test_settings.py  test_worker_cycle.py
(+47 files in other folders)
