[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-backend"
version = "1.0.0"
description = "Compliance Radar worker backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "psycopg[binary,pool]==3.3.4",
  "httpx==0.28.1",
  "beautifulsoup4==4.14.3",
  "pyyaml==6.0.3",
  "openai==2.38.0",
  "anthropic==0.102.0",
  "pypdf==6.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
radar-worker = "radar_backend.worker.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
